com/sun/management/HotSpotDiagnosticMXBean/CheckOrigin.java: assert(!on_C_heap() || allocated_on_C_heap()) failed: growable array must be on C heap if elements are

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b64

        #section:main
        ----------messages:(3/109)----------
        command: main CheckOrigin
        reason: User specified action: run main CheckOrigin
        elapsed time (seconds): 2.188
        ----------System.out:(22/1607)----------
        Command line: [/export/local/aurora/CommonData/JDK_DIR/bin/java -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:Flags=/tmp/CheckOriginFlags3881912888324080337.tmp -cp /scratch/local/aurora/sandbox/results/workDir/classes/1/com/sun/management/HotSpotDiagnosticMXBean:/scratch/local/aurora/sandbox/results/workDir/classes/1/lib/testlibrary CheckOrigin -runtests ]
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/growableArray.hpp:119
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/094303.daholme/s/hotspot/src/share/vm/utilities/growableArray.hpp:119), pid=13835, tid=139872558003968
        # assert(!on_C_heap() || allocated_on_C_heap()) failed: growable array must be on C heap if elements are
        #
        # JRE version: (9.0) (build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150331094303.daholme.jdk9-hs-rt-b00 mixed mode, sharing linux-amd64 )
        # Core dump written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /scratch/local/aurora/sandbox/results/workDir/com/sun/management/HotSpotDiagnosticMXBean/CheckOrigin/core.13835)
        #
        # An error report file with more information is saved as:
        # /scratch/local/aurora/sandbox/results/workDir/com/sun/management/HotSpotDiagnosticMXBean/CheckOrigin/hs_err_pid13835.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 139872558003968
        Dumping core ...
        sub process exit == 134
        ----------System.err:(13/768)----------
        java.lang.Exception: Unexpected exit code from subprocess == 134
        at CheckOrigin.main(CheckOrigin.java:78)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:502)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
        at java.lang.Thread.run(Thread.java:745)

        JavaTest Message: Test threw exception: java.lang.Exception: Unexpected exit code from subprocess == 134
        JavaTest Message: shutting down test

              Assignee:
              Staffan Larsen (Inactive)
              Reporter:
              Staffan Larsen (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: